--- a/jp/study-design-3.qmd
+++ b/jp/study-design-3.qmd
@@ -249,9 +249,9 @@ a:hover {
 
 以下のコードでは、死亡だけではなく再発を伴った生存時間アウトカム3種類をRで生成する「関数」generate_dataを定義しています。OSのイベントは「死亡」、RFSのイベントは「死亡と再発」です。CIRのイベントは「再発」ですが、死亡を競合リスクとして扱います。なお、generate_data()やこのシミュレーションデータは、今後の解説でも再利用する予定です。
 
--   ストーマ保有：2項分布（rbinom関数）から生成した2値データ
+-   ストーマ保有：2項分布（`rbinom`）から生成した2値データ
 
--   生存時間：指数分布（rexp関数）から生成した生存時間データ（t_relapse, t_death, t_censoringの乱数から計算）
+-   生存時間：指数分布（`rexp`）から生成した生存時間データ（t_relapse, t_death, t_censoringの乱数から計算）
 
 前回、競合リスクのない生存時間データを要約しましたが、そこで用いたのはKaplan-Meier曲線でしたよね。それに対して、競合リスクデータの解析では、Kaplan-Meier曲線ではなく、Aalen-Johansen曲線を用いるのが正式です。
 :::
